--- a/nvme_ol_85.adoc
+++ b/nvme_ol_85.adoc
@@ -33,6 +33,13 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 *	With Oracle Linux 8.5, the NetApp plugin in the native `nvme-cli` package is capable of displaying ONTAP details as well as ONTAP namespaces.
 
+== Known limitations
+
+Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
+
+* *No auto-reconnect after paths get reinstated* - NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` timer of 10 minutes following a path down.
+
+* *No auto-connect during host boot* - NVMe/TCP cannot connect automatically during host boot.
 
 == Configuration requirements
 
@@ -82,9 +89,10 @@ If you intend to run both NVMe and SCSI traffic on the same Oracle Linux 8.4 co-
 defaults {
     enable_foreign  NONE
 }
+----
 
 Restart the `multipathd` daemon by running a `systemctl restart multipathd` command to let the new setting take effect.
-----
+
 
 
 ====
