--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -163,7 +163,7 @@ NOTE: Patches are available for Oracle bug 15824910 on various versions of Solar
 
 == Recommended settings for SnapMirror Business Continuity
 
-In order to ensure the Solaris client applications are non-disruptive when an unplanned site failover switchover occurs in an SnapMirror Business Continuity (SM-BC) environment, the following setting needs to be configured on Solaris 11.3 host. This setting will override the failover module – `f_tpgs` in order to prevent the code path that detects the contradiction from being executed.
+In order to make sure the Solaris client applications are non-disruptive when an unplanned site failover switchover occurs in an SnapMirror Business Continuity (SM-BC) environment, the following setting needs to be configured on Solaris 11.3 host. This setting will override the failover module – `f_tpgs` in order to prevent the code path that detects the contradiction from being executed.
 
 NOTE: Beginning with ONTAP 9.9.1, SM-BC setting configurations are supported in Solaris 11.3 host.
 
@@ -189,6 +189,8 @@ svl_fops_name = 0xa00298d69e0 "conf f_tpgs"
 
 NOTE: `conf` will be added to the `svl_fops_name` when a `scsi-vhci-failover-override` has been applied.
 For additional information and recommended changes to default settings, refer to NetApp KB article https://kb.netapp.com/Advice_and_Troubleshooting/Data_Protection_and_Security/SnapMirror/Solaris_Host_support_recommended_settings_in_SnapMirror_Business_Continuity_(SM-BC)_configuration[Solaris Host support recommended settings in SnapMirror Business Continuity (SM-BC) configuration^].
+
+//BURT 1528592 26 Jan 2023
 
 == Known Problems and Limitations
 
