--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -63,7 +63,7 @@ The `host_config` command does the following:
 . Reboot the host.
 
 
-== SAN Toolkit
+== SAN toolkit
 
 include::_include/hu/reuse_hu_san_toolkit_withoutexample.adoc[]
 
@@ -81,7 +81,7 @@ data_vserver       /vol/vol1/lun1  /dev/rdsk/c0t600A098038314362692451465A2F4F39
 data_vserver       /vol/vol2/lun2  /dev/rdsk/c0t600A098038314362705D51465A626475d0s2  qlc1  FCP       20g   C
 ----
 
-== SAN Booting
+== SAN booting
 
 .What you'll need
 If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=71102;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
@@ -118,7 +118,7 @@ The path priorities are displayed against the *Access State* section for each LU
 
 NOTE: All SAN Arrays (ASA) configurations are supported beginning in ONTAP 9.8 for Solaris Hosts.
 
-== Recommended Settings
+== Recommended settings
 
 Following are some parameter settings that are recommended for Solaris 11.3 SPARC and x86_64 with NetApp ONTAP LUNs. These parameter values are set by Host Utilities.
 
@@ -135,18 +135,18 @@ Following are some parameter settings that are recommended for Solaris 11.3 SPAR
 | physical_block_size  | 4096
 |===
 
-=== Recommended Settings for MetroCluster
+=== Recommended settings for MetroCluster
 
 By default, the Solaris operating system will fail I/Os after 20 seconds if all paths to a LUN are lost. This is controlled by the `fcp_offline_delay` parameter. The default value for `fcp_offline_delay` is appropriate for standard ONTAP clusters. However, in MetroCluster configurations the value of `fcp_offline_delay` must be increased to *120s* to ensure that I/O does not prematurely time out during operations including unplanned failovers. For addition information and recommended changes to default settings, refer to NetApp https://kb.netapp.com/app/answers/answer_view/a_id/1001373/loc/en_US[KB1001373^].
 
-== Oracle Solaris Virtualization
+== Oracle solaris Virtualization
 
 *	Solaris virtualization options include Solaris Logical Domains (also called LDOMs or Oracle VM Server for SPARC), Solaris Dynamic Domains, Solaris Zones, and Solaris Containers. These technologies have been rebranded generally as "Oracle Virtual Machines" despite the fact that they are based on very different architectures.
 *	In some cases, multiple options can be used together such as a Solaris Container within a particular Solaris Logical Domain.
 *	NetApp generally supports the use of these virtualization technologies where the overall configuration is supported by Oracle and any partition with direct access to LUNs is listed on the https://mysupport.netapp.com/matrix/imt.jsp?components=95803;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix^] in a supported configuration. This includes root containers, LDOM IO domains, and LDOM's using NPIV to access LUNs.
 *	Partitions and/or virtual machines which use only virtualized storage resources, such as a `vdsk`, do not need specific qualification as they do not have direct access to NetApp LUNs. Only the partition/VM that has direct access to the underlying LUN, such as an LDOM IO domain, must be found in the https://mysupport.netapp.com/matrix/imt.jsp?components=95803;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix^].
 
-=== Recommended Settings for Virtualization
+=== Recommended settings for Virtualization
 
 When LUNs are used as virtual disk devices within an LDOM, the source of the LUN is masked by virtualization and the LDOM will not properly detect the block sizes. To prevent this issue, the LDOM operating system must be patched for Oracle Bug 15824910 and a `vdc.conf` file must be created that sets the block size of the virtual disk to 4096. See Oracle Doc 2157669.1 for more information.
 
@@ -194,7 +194,7 @@ For additional information and recommended changes to default settings, refer to
 
 //BURT 1528592 26 Jan 2023
 
-== Known Problems and Limitations
+== Known problems and limitations
 
 [cols=4*, options="header"]
 |===
