--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -30,6 +30,8 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 * Both NVMe and SCSI traffic can be run on the same co-existent host. In fact, that is expected to be the commonly deployed host configuration. Therefore, for SCSI, you might configure `dm-multipath` as usual for SCSI LUNs resulting in mpath devices, whereas NVMe multipath might be used to configure NVMe-oF multipath devices on the host.
 
+* Beginning with ONTAP 9.l2.1, in-band authentication feature is implemented in SLES15 SP4.
+
 == Known limitations
 
 There are no known limitations.
@@ -116,6 +118,50 @@ vs_nvme_145 nvme_145_1 nqn.2014-08.org.nvmexpress:uuid:c7b07b16-a22e-41a6-a1fd-c
 ----
 
 Proceed with the following steps depending on the FC adapter being used on the host.
+
+== Update NVMe-oF initiator packages
+
+.Steps
+
+. Install the SLES15 SP4 MU `kernel-default-5.14.21-150400.24.21.2` package to avail the latest kernel fixes.
++
+`# rpm -ivh kernel-default-5.14.21-150400.24.21.2.x86_64.rpm`
++
+[NOTE]
+====
+If the above `rpm -ivh` command fails with a newer package already installed message, then proceed to install the following using the --oldpackage option, for example:
++
+`# rpm -ivh kernel-default-5.14.21-150400.24.21.2.x86_64.rpm --oldpackage`
+
+To make the above kernel the default entry in the grub bootloader, run the following commands:
++
+----
+# grub2-set-default 'Advanced options for SLES 15-SP4>SLES 15-SP4, with Linux 5.14.21-150400.24.21-default'
+
+# grub2-mkconfig -o /boot/grub2/grub.cfg
+----
+
+During reboot, the host will choose the above kernel as the default grub entry.
+====
+
+. Reboot the host and verify that it boots into the above-mentioned SLES15 SP4 MU kernel:
++
+----
+# uname -r
+5.14.21-150400.24.21-default
+----
+
+. Upgrade to the latest available SLES15 SP4 `libnvme1-1.0-150400.3.12.1 & nvme-cli-2.0-150400.3.12.1` MU associated packages.
++
+----
+# rpm -qa|grep nvme
+libnvme-devel-1.0-150400.3.12.1.x86_64
+python3-libnvme-1.0-150400.3.12.1.x86_64
+nvme-cli-2.0-150400.3.12.1.x86_64
+libnvme1-1.0-150400.3.12.1.x86_64
+nvme-cli-bash-completion-2.0-150400.3.12.1.x86_64
+nvme-cli-zsh-completion-2.0-150400.3.12.1.x86_64
+----
 
 == Configure NVMe/FC
 
@@ -242,13 +288,7 @@ QLE2742 FW:v9.08.02 DVR:v10.02.07.800-k
 
 == Configure NVMe/TCP
 
-Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
-
-* No auto-reconnect after paths get reinstated NVMe/TCP cannot automatically reconnect to a path that is reinstated beyond the default `ctrl-loss-tmo` timer of 10 minutes following a path down.
-
-* No auto-connect during host bootup NVMe/TCP cannot automatically connect during host bootup as well.
-
-You should set the retry period for failover events to at least 30 minutes to prevent timeouts.  You can increase the retry period by increasing the value of the ctrl_loss_tmo timer. Following are the details:
+include::_include/nvme/reuse_configure_nvmetcp.adoc[]
 
 .Steps
 
@@ -298,7 +338,7 @@ sectype: none
 # nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.57
 ----
 
-. Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. Ensure you set a longer `ctrl_loss_tmo` timer retry period (for example, 30 minutes, which can be set through -l 1800) during the `connect-all` so that it would retry for a longer period of time in the event of a path loss. For example,
+. Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. Verify that you set a longer `ctrl_loss_tmo` timer retry period (for example, 30 minutes, which can be set through -l 1800) during the `connect-all` so that it retries for a longer period of time in the event of a path loss. For example,
 +
 ----
 # nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.51 -l 1800
@@ -443,84 +483,401 @@ NSID  UUID                                   Size
 }
 ----
 
+== Discovery Hardening - TP 8013 & TP 8014 (with ONTAP 9.11.1)
+
+TP 8013 specifies the use of unique subsystem NQNs (in addition to the well known discovery NQN) for discovery subsystems. Beginning with ONTAP 9.11.1, this feature is implemented. This feature is implemented in the new `libnmve/nvme-cli v2.x` changes in SLES15 SP4 and is able to connect to the specified unique subsystem NQN of the said ONTAP discovery controller.
+
+And as part of TP 8014, ONTAP 9.11.1 has introduced two new subsystem types in the discovery log page data:
+
+* 0x02 which indicates an NVMe I/O subsystem and 0x03 which indicates current discovery subsystem. 
+
+* For the Entry Flags, ONTAP sets EPCSD (Explicit Persistent Connection Support for Discovery) to 1 and 0 for Discovery subsystems and I/O subsystems respectively, whereas it also sets DUPRETINFO (Duplicate Returned Information) to 1 and 0 for Discovery subsystems and I/O subsystems respectively. The new libnvme/nvme-cli v2.x changes in SLES15 SP4 is able to consume this properly and connect accordingly. 
+
+Refer to the following procedure:
+
+.Steps
+
+. Verify that the new libnvme/nvme-cli v2.x changes in SLES15 SP4 have been implemented successfully:
+
+----
+# nvme discover -t tcp -w 192.168.1.16 -a 192.168.1.116
+
+Discovery Log Number of Records 8, Generation counter 18
+=====Discovery Log Entry 0======
+trtype: tcp
+adrfam: ipv4
+subtype: current discovery subsystem
+treq: not specified
+portid: 0
+trsvcid: 8009
+subnqn: nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery
+traddr: 192.168.2.117
+eflags: explicit discovery connections, duplicate discovery information
+sectype: none
+=====Discovery Log Entry 1======
+trtype: tcp
+adrfam: ipv4
+subtype: current discovery subsystem
+treq: not specified
+portid: 1
+trsvcid: 8009
+subnqn: nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery
+traddr: 192.168.1.117
+eflags: explicit discovery connections, duplicate discovery information
+sectype: none
+=====Discovery Log Entry 2======
+trtype: tcp
+adrfam: ipv4
+subtype: current discovery subsystem
+treq: not specified
+portid: 2
+trsvcid: 8009
+subnqn: nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery
+traddr: 192.168.2.116
+eflags: explicit discovery connections, duplicate discovery information
+sectype: none
+=====Discovery Log Entry 3======
+trtype: tcp
+adrfam: ipv4
+subtype: current discovery subsystem
+treq: not specified
+portid: 3
+trsvcid: 8009
+subnqn: nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery
+traddr: 192.168.1.116
+eflags: explicit discovery connections, duplicate discovery information
+sectype: none
+=====Discovery Log Entry 4======
+trtype: tcp
+adrfam: ipv4
+subtype: nvme subsystem
+treq: not specified
+portid: 0
+trsvcid: 4420
+subnqn: nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:subsystem.subsys_CLIENT116
+traddr: 192.168.2.117
+eflags: not specified
+sectype: none
+=====Discovery Log Entry 5======
+trtype: tcp
+adrfam: ipv4
+subtype: nvme subsystem
+treq: not specified
+portid: 1
+trsvcid: 4420
+subnqn: nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:subsystem.subsys_CLIENT116
+traddr: 192.168.1.117
+eflags: not specified
+sectype: none
+=====Discovery Log Entry 6======
+trtype: tcp
+adrfam: ipv4
+subtype: nvme subsystem
+treq: not specified
+portid: 2
+trsvcid: 4420
+subnqn: nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:subsystem.subsys_CLIENT116
+traddr: 192.168.2.116
+eflags: not specified
+sectype: none
+=====Discovery Log Entry 7======
+trtype: tcp
+adrfam: ipv4
+subtype: nvme subsystem
+treq: not specified
+portid: 3
+trsvcid: 4420
+subnqn: nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:subsystem.subsys_CLIENT116
+traddr: 192.168.1.116
+eflags: not specified
+sectype: none
+----
+
+. Create a Persistent Discovery Controller (PDC) connection to this discovery subsystem:
++
+`# nvme discover -t tcp -w 192.168.1.16 -a 192.168.1.116 -p`
+
+. Validate that the above PDC was created by connecting to its unique subsystem NQN itself (and not the well-known NQN) in ONTAP:
+
+----
+*> vserver nvme show-discovery-controller -instance -vserver vs_CLIENT116
+
+Vserver Name: vs_CLIENT116
+Controller ID: 00C0h
+Discovery Subsystem NQN: nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:discovery
+Logical Interface UUID: d23cbb0a-c0a6-11ec-9731-d039ea165abc
+Logical Interface: CLIENT116_lif_4a_1
+Node: A400-14-124
+Host NQN: nqn.2014-08.org.nvmexpress:uuid:12372496-59c4-4d1b-be09-74362c0c1afc
+Transport Protocol: nvme-tcp
+Initiator Transport Address: 192.168.1.16
+Host Identifier: 59de25be738348f08a79df4bce9573f3
+Admin Queue Depth: 32
+Header Digest Enabled: false
+Data Digest Enabled: false
+Vserver UUID: 48391d66-c0a6-11ec-aaa5-d039ea165514
+----
+
+== In-band Auth - TP 8006 (with ONTAP 9.12.1)
+
+In-band authentication enables NVMe hosts and NVMe controllers to authenticate each other when an NVMe over Fabrics connection is established. DH-HMAC-CHAP is the authentication protocol that is currently specified to be used for NVMe over Fabrics. DH-HMAC-CHAP provides bidirectional or unidirectional authentication between a host and a controller. This authentication protocol requires each host or controller to be associated with a DH-HMAC-CHAP key. The key for a host or controller is derived from an administratively configured secret and the NQN of the NVMe host or the controller respectively. An NVMe host or controller that seeks to authenticate its peer is required to know the key associated with its peer.
+
+.Steps
+
+. Run the following command to generate the dhchap keys on the SLES15 SP4 host :
++
+`Usage: nvme gen-dhchap-key <device> [OPTIONS]`
+
+. Generate a DH-HMAC-CHAP host key usable for NVMe In-Band Authentication.
++
+----
+Options:
+[ --secret=<STRING>, -s <STRING> ] --- Optional secret (in hexadecimal characters) to be used to
+initialize the host key.
+[ --key-length=<NUM>, -l <NUM> ] --- Length of the resulting key (32, 48, or 64 bytes).
+[ --nqn=<STRING>, -n <STRING> ] --- Host NQN to use for key transformation.
+[ --hmac=<NUM>, -m <NUM> ] --- HMAC function to use for key
+transformation (0 = none, 1 = SHA-256, 2 = SHA-384, 3 = SHA-512).
+----
++
+For example, to generate a random dhchap-key using hmac set to 3 (i.e. SHA-512) along with the host's nqn:
++
+----
+# nvme gen-dhchap-key -m 3 -n nqn.2014-08.org.nvmexpress:uuid:d3ca725a-ac8d-4d88-b46a-174ac235139b
+DHHC-1:03:J2UJQfj9f0pLnpF/ASDJRTyILKJRr5CougGpGdQSysPrLu6RW1fGl5VSjbeDF1n1DEh3nVBe19nQ/LxreSBeH/bx/pU=:
+----
++
+This may be used as the secret on the host and the target for a given subsystem during the nvme connect with the following dhchap options:
++
+----
+[ --dhchap-secret=<STR>, -S <STR> ] --- user-defined dhchap key (if default not used)
+[ --dhchap-ctrl-secret=<STR>, -C <STR> ] --- user-defined dhchap controller key (for bi-directional authentication)
+----
+
+If no secret is specified in the Linux nvme-cli dhchap option during the connect, it would attempt to locate the default key at /etc/nvme/hostkey. If not found, no authentication is attempted.
+
+=== In-band Auth using CLI
+
+Following procedure is an example of using In-band Auth using bidirectional connect through the CLI.
+
+.Steps
+
+. Generate the host and controller keys using the nvme gen-dhchap-key:
++
+----
+# cat /etc/nvme/hostnqn
+nqn.2014-08.org.nvmexpress:uuid:e58eca24-faff-11ea-8fee-3a68dd3b5c5f
+----
++
+----
+# nvme gen-dhchap-key -m 1 -n nqn.2014-08.org.nvmexpress:uuid:e58eca24-faff-11ea-8fee-3a68dd3b5c5f
+DHHC-1:01:NunEWY7AZlXqxITGheByarwZdQvU4ebZg9HOjIr6nOHEkxJg:
+----
++
+----
+# nvme gen-dhchap-key -m 3 -n nqn.2014-08.org.nvmexpress:uuid:e58eca24-faff-11ea-8fee-3a68dd3b5c5f
+DHHC-1:03:2YJinsxa2v3+m8qqCiTnmgBZoH6mIT6G/6f0aGO8viVZB4VLNLH4z8CvK7pVYxN6S5fOAtaU3DNi12rieRMfdbg3704=:
+----
+
+. Specify both these host and controller keys during 'subsystem host add' in ONTAP:
++
+----
+::> nvme subsystem host add -vserver integ -subsystem subsys114 -host-nqn nqn.2014-08.org.nvmexpress:uuid:e58eca24-faff-11ea-8fee-3a68dd3b5c5f -dhchap-dh-group 3072-bit -dhchap-host-secret-key DHHC-1:01:NunEWY7AZlXqxITGheByarwZdQvU4ebZg9HOjIr6nOHEkxJg: -dhchap-controller-secret-key DHHC-1:03:2YJinsxa2v3+m8qqCiTnmgBZoH6mIT6G/6f0aGO8viVZB4VLNLH4z8CvK7pVYxN6S5fOAtaU3DNi12rieRMfdbg3704=:
+(vserver nvme subsystem host add)
+----
+
+. Now on the host, proceed with a bidirectional connect specifying both these keys:
++
+----
+# nvme connect -t tcp -w 192.168.1.14 -a 192.168.1.201 -n nqn.1992-08.com.netapp:sn.752d9843d2ab11ecbbcbd039ea165514:subsystem.subsys114 -S DHHC-1:01:NunEWY7AZlXqxITGheByarwZdQvU4ebZg9HOjIr6nOHEkxJg: -C DHHC-1:03:2YJinsxa2v3+m8qqCiTnmgBZoH6mIT6G/6f0aGO8viVZB4VLNLH4z8CvK7pVYxN6S5fOAtaU3DNi12rieRMfdbg3704=:
+----
+
+. Verify that the bidirectional connect is successful and the keys are properly registered in the host sysfs:
++
+----
+# nvme list
+Node Generic SN Model Namespace Usage Format FW Rev
+--------------------- --------------------- -------------------- -----------------------------------
+/dev/nvme0n1 /dev/ng0n1 81CYrBSoKGYrAAAAAAAN NetApp ONTAP Controller 1 1.07 GB / 1.07 GB 4 KiB + 0 B FFFFFFFF
+
+# nvme list-subsys
+nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.752d9843d2ab11ecbbcbd039ea165514:subsystem.subsys114
+\
++- nvme0 tcp traddr=192.168.1.201,trsvcid=4420,host_traddr=192.168.1.14 live
+
+# nvme list-subsys /dev/nvme0n1
+nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.752d9843d2ab11ecbbcbd039ea165514:subsystem.subsys114
+\
++- nvme0 tcp traddr=192.168.1.201,trsvcid=4420,host_traddr=192.168.1.14 live optimized
+
+# cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_secret
+DHHC-1:01:NunEWY7AZlXqxITGheByarwZdQvU4ebZg9HOjIr6nOHEkxJg:
+
+# cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_ctrl_secret
+DHHC-1:03:2YJinsxa2v3+m8qqCiTnmgBZoH6mIT6G/6f0aGO8viVZB4VLNLH4z8CvK7pVYxN6S5fOAtaU3DNi12rieRMfdbg3704=:
+----
+
+=== In-band Auth using config JSON file
+
+If you need to specify different keys for different subsystems during a nvme connect-all, then the only option to do that would be run the connect-all command using the `-J <cfg file>` option and specifying different keys for respective subsystems. Note that `dhchap_key` corresponds to `dhchap_secret` and `dhchap_ctrl_key` corresponds to `dhchap_ctrl_secret`. Refer to the folloiwng procedure:
+
+.Steps
+
+. Run the following command:
++
+----
+# cat /etc/nvme/config.json
+[
+  {
+        "hostnqn":"nqn.2014-08.org.nvmexpress:uuid:12372496-59c4-4d1b-be09-74362c0c1afc",
+        "hostid":"3ae10b42-21af-48ce-a40b-cfb5bad81839",
+        "dhchap_key":"DHHC-1:03:Cu3ZZfIz1WMlqZFnCMqpAgn/T6EVOcIFHez215U+Pow8jTgBF2UbNk3DK4wfk2EptWpna1rpwG5CndpOgxpRxh9m41w=:"
+   },
+   {
+         "hostnqn":"nqn.2014-08.org.nvmexpress:uuid:12372496-59c4-4d1b-be09-74362c0c1afc",
+         "subsystems":[
+         {
+              "nqn":"nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:subsystem.subsys_CLIENT116",
+              "ports":[
+              {
+                        "transport":"tcp",
+                        "traddr":"192.168.1.117",
+                        "host_traddr":"192.168.1.16",
+                        "trsvcid":"4420",
+                        "dhchap_ctrl_key":"DHHC-1:01:0h58bcT/uu0rCpGsDYU6ZHZvRuVqsYKuBRS0Nu0VPx5HEwaZ:"
+               },
+              {
+                        "transport":"tcp",
+                        "traddr":"192.168.1.116",
+                        "host_traddr":"192.168.1.16",
+                        "trsvcid":"4420",
+                        "dhchap_ctrl_key":"DHHC-1:01:0h58bcT/uu0rCpGsDYU6ZHZvRuVqsYKuBRS0Nu0VPx5HEwaZ:"
+               },
+               {
+                         "transport":"tcp",
+                         "traddr":"192.168.2.117",
+                         "host_traddr":"192.168.2.16",
+                         "trsvcid":"4420",
+                         "dhchap_ctrl_key":"DHHC-1:01:0h58bcT/uu0rCpGsDYU6ZHZvRuVqsYKuBRS0Nu0VPx5HEwaZ:"
+                },
+                {
+                           "transport":"tcp",
+                           "traddr":"192.168.2.116",
+                           "host_traddr":"192.168.2.16",
+                           "trsvcid":"4420",
+                           "dhchap_ctrl_key":"DHHC-1:01:0h58bcT/uu0rCpGsDYU6ZHZvRuVqsYKuBRS0Nu0VPx5HEwaZ:"
+                 }
+              ]
+          }
+       ]
+   }
+]
+----
+
+. Now run a connect-all to this config JSON file (will automatically pick up the discovery options from the /etc/nvme/discovery.conf):
++
+----
+# nvme connect-all -J /etc/nvme/config.json
+traddr=192.168.2.116 is already connected
+traddr=192.168.1.116 is already connected
+traddr=192.168.2.117 is already connected
+traddr=192.168.1.117 is already connected
+traddr=192.168.2.117 is already connected
+traddr=192.168.1.117 is already connected
+traddr=192.168.2.116 is already connected
+traddr=192.168.1.116 is already connected
+traddr=192.168.2.116 is already connected
+traddr=192.168.1.116 is already connected
+traddr=192.168.2.117 is already connected
+traddr=192.168.1.117 is already connected
+----
++
+----
+# nvme list
+Node         Generic    SN  
+--------------------- --------------------- 
+/dev/nvme1n2 /dev/ng1n2 81CYrBSoKGRJAAAAAAAB 
+/dev/nvme1n1 /dev/ng1n1 81CYrBSoKGRJAAAAAAAB 
+
+Model                   Namespace Usage            Format  FW Rev
+---------------------------------------------------------------
+NetApp ONTAP Controller 2         5.37 GB / 5.37 GB 4 KiB + 0 B FFFFFFFF
+NetApp ONTAP Controller 1         5.37 GB / 5.37 GB 4 KiB + 0 B FFFFFFFF
+----
++
+----
+# nvme list-subsys
+nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:subsystem.subsys_CLIENT116
+\
++- nvme1 tcp traddr=192.168.2.117,trsvcid=4420,host_traddr=192.168.2.16 live
++- nvme2 tcp traddr=192.168.1.117,trsvcid=4420,host_traddr=192.168.1.16 live
++- nvme3 tcp traddr=192.168.2.116,trsvcid=4420,host_traddr=192.168.2.16 live
++- nvme4 tcp traddr=192.168.1.116,trsvcid=4420,host_traddr=192.168.1.16 live
+----
++
+----
+# nvme list-subsys /dev/nvme1n1
+nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.48391d66c0a611ecaaa5d039ea165514:subsystem.subsys_CLIENT116
+\
++- nvme1 tcp traddr=192.168.2.117,trsvcid=4420,host_traddr=192.168.2.16 live non-optimized
++- nvme2 tcp traddr=192.168.1.117,trsvcid=4420,host_traddr=192.168.1.16 live non-optimized
++- nvme3 tcp traddr=192.168.2.116,trsvcid=4420,host_traddr=192.168.2.16 live optimized
++- nvme4 tcp traddr=192.168.1.116,trsvcid=4420,host_traddr=192.168.1.16 live optimized
+----
++
+----
+# cat /sys/class/nvme-subsystem/nvme-subsys1/nvme1/dhchap_secret
+DHHC-1:03:Cu3ZZfIz1WMlqZFnCMqpAgn/T6EVOcIFHez215U+Pow8jTgBF2UbNk3DK4wfk2EptWpna1rpwG5CndpOgxpRxh9m41w=:
+
+# cat /sys/class/nvme-subsystem/nvme-subsys1/nvme1/dhchap_ctrl_secret
+DHHC-1:01:0h58bcT/uu0rCpGsDYU6ZHZvRuVqsYKuBRS0Nu0VPx5HEwaZ:
+
+# cat /sys/class/nvme-subsystem/nvme-subsys1/nvme2/dhchap_secret
+DHHC-1:03:Cu3ZZfIz1WMlqZFnCMqpAgn/T6EVOcIFHez215U+Pow8jTgBF2UbNk3DK4wfk2EptWpna1rpwG5CndpOgxpRxh9m41w=:
+
+# cat /sys/class/nvme-subsystem/nvme-subsys1/nvme2/dhchap_ctrl_secret
+DHHC-1:01:0h58bcT/uu0rCpGsDYU6ZHZvRuVqsYKuBRS0Nu0VPx5HEwaZ:
+
+# cat /sys/class/nvme-subsystem/nvme-subsys1/nvme3/dhchap_secret
+DHHC-1:03:Cu3ZZfIz1WMlqZFnCMqpAgn/T6EVOcIFHez215U+Pow8jTgBF2UbNk3DK4wfk2EptWpna1rpwG5CndpOgxpRxh9m41w=:
+
+# cat /sys/class/nvme-subsystem/nvme-subsys1/nvme3/dhchap_ctrl_secret
+DHHC-1:01:0h58bcT/uu0rCpGsDYU6ZHZvRuVqsYKuBRS0Nu0VPx5HEwaZ:
+
+# cat /sys/class/nvme-subsystem/nvme-subsys1/nvme4/dhchap_secret
+DHHC-1:03:Cu3ZZfIz1WMlqZFnCMqpAgn/T6EVOcIFHez215U+Pow8jTgBF2UbNk3DK4wfk2EptWpna1rpwG5CndpOgxpRxh9m41w=:
+
+# cat /sys/class/nvme-subsystem/nvme-subsys1/nvme4/dhchap_ctrl_secret
+DHHC-1:01:0h58bcT/uu0rCpGsDYU6ZHZvRuVqsYKuBRS0Nu0VPx5HEwaZ:
+----
+
 == Troubleshooting
 
-=== LPFC Verbose Logging
+=== LPFC verbose logging
 
 include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
 
 === Qla2xxx verbose logging
 
-There is no similar specific qla2xxx logging for NVMe/FC as for lpfc driver. Therefore, you may set the general qla2xxx logging level using the following steps:
+include::_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc[]
 
-. Append the `ql2xextended_error_logging=0x1e400000` value to the corresponding `modprobe qla2xxx conf` file.
 
-. Recreate the `initramfs` by running `dracut -f` command and then reboot the host.
 
-. After reboot, verify that the verbose logging has been applied as follows:
-+
-----
-# cat /etc/modprobe.d/qla2xxx.conf
-options qla2xxx ql2xnvmeenable=1 ql2xextended_error_logging=0x1e400000
-# cat /sys/module/qla2xxx/parameters/ql2xextended_error_logging
-507510784
-----
-
-=== Common nvme-cli Errors and Workarounds
-
-The errors displayed by `nvme-cli` during nvme discover, nvme connect or nvme connect-all operations and the workarounds are shown in the following table:
-
-[options="header", cols="20, 20, 50"]
-|===
-|Errors displayed by `nvme-cli`  | Probable cause | Workaround
-| `Failed to write to /dev/nvme-fabrics: Invalid argument`
-|Incorrect syntax
-|Ensure you are using the correct syntax for the nvme commands.
-|`Failed to write to /dev/nvme-fabrics: No such file or directory`  |Multiple issues could trigger this.
-Passing wrong arguments to the nvme commands is one of the common causes.
-a| * Ensure you have passed the correct arguments (such as, correct WWNN string, WWPN string, and more) to the commands.
-* If the arguments are correct, but you still see this error, check if the `/sys/class/scsi_host/host*/nvme_info` output is proper, the NVMe initiator showing as `Enabled`, and the NVMe/FC target LIFs properly showing up here under the remote ports sections.
-Example:
-+
-----
-
-# cat /sys/class/scsi_host/host*/nvme_info
-NVME Initiator Enabled
-NVME LPORT lpfc0 WWPN x10000090fae0ec9d WWNN x20000090fae0ec9d DID x012000 ONLINE
-NVME RPORT WWPN x200b00a098c80f09 WWNN x200a00a098c80f09 DID x010601 TARGET DISCSRVC ONLINE
-NVME Statistics
-LS: Xmt 0000000000000006 Cmpl 0000000000000006
-FCP: Rd 0000000000000071 Wr 0000000000000005 IO 0000000000000031
-Cmpl 00000000000000a6 Outstanding 0000000000000001
-NVME Initiator Enabled
-NVME LPORT lpfc1 WWPN x10000090fae0ec9e WWNN x20000090fae0ec9e DID x012400 ONLINE
-NVME RPORT WWPN x200900a098c80f09 WWNN x200800a098c80f09 DID x010301 TARGET DISCSRVC ONLINE
-NVME Statistics
-LS: Xmt 0000000000000006 Cmpl 0000000000000006
-FCP: Rd 0000000000000073 Wr 0000000000000005 IO 0000000000000031
-Cmpl 00000000000000a8 Outstanding 0000000000000001`
-----
-
-* If the target LIFs don't show up as above in the `nvme_info` output, check the `/var/log/messages` and `dmesg` output for any suspicious NVMe/FC failures, and report or fix accordingly.
-
-| `No discovery log entries to fetch`  | Generally seen if the `/etc/nvme/hostnqn` string has not been added to the corresponding subsystem on the NetApp array or an incorrect hostnqn string has been added to the respective subsystem. |Ensure the exact `/etc/nvme/hostnqn` string is added to the corresponding subsystem on the NetApp array (verify through the `vserver nvme subsystem host show` command).
-
-|`Failed to write to /dev/nvme-fabrics: Operation already in progress`  |Seen if the controller associations or specified operation is already created or in the process of being created. This could happen as part of the auto-connect scripts installed above.
-|None. For nvme discover, try running this command after some time. For nvme connect and connect-all, run `nvme list` command to verify that the namespace devices are already created and displayed on the host.
-|===
+include::_include/hu/reuse_hu_common_nvme_cli_errors.adoc[]
 
 === When to contact technical support
-If you are still facing issues, please collect the following files and command outputs and contact technical support for further triage:
 
-----
-cat /sys/class/scsi_host/host*/nvme_info
-/var/log/messages
-dmesg
-nvme discover output as in:
-nvme discover --transport=fc --traddr=nn-0x200a00a098c80f09:pn-0x200b00a098c80f09 --host-traddr=nn-0x20000090fae0ec9d:pn-0x10000090fae0ec9d
-nvme list
-nvme list-subsys /dev/nvmeXnY
-----
+include::_include/hu/reuse_hu_contact_tech_support.adoc[]
 
+== Known issues and workarounds
+
+[cols="10,30,10",options="header"]
+|===
+|NetApp Bug ID	|Title	|Workaround
+|1490498	| Host crash at crypto_ahash_digest() during NVMe reauth | None
+|1496739	| Host fails to disconnect after sending auth_failure2 during re-auth	| None	
+|===
+
+//BURT 1529116 30 Jan 2023
 
 
